[package]
name = "rwkv_tokenizer_node"
version = "0.1.0"
edition = "2021"
authors = [ "Eugene Cheah (@picocreator)" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rwkv_tokenizer_node"
crate-type = ["dylib"]

[dependencies]
tokenizers = "0.13.3"
